--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "react-native-easy-toast": "^1.1.0",
     "react-native-popup-dialog": "^0.11.46",
     "react-native-splash-screen": "^3.0.6",
+    "react-native-storage": "^0.2.2",
     "react-native-swiper": "^1.5.13",
     "react-native-tab-navigator": "^0.3.4",
-    "react-navigation": "^1.5.11",
+    "react-navigation": "^2.0.1",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
