--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-storage": "^0.2.2",
     "react-native-swiper": "^1.5.13",
     "react-native-tab-navigator": "^0.3.4",
+    "react-native-wechat": "^1.9.9",
     "react-navigation": "^2.0.1",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
