cookie组件引入；APP调试

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -139,6 +139,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-cookie')
     compile project(':react-native-splash-screen')
     compile project(':RCTWeChat')
     compile fileTree(dir: "libs", include: ["*.jar"])
