--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "16.3.1",
     "react-native": "0.55.2",
     "react-native-awesome-alerts": "^1.0.7",
+    "react-native-cookie": "^0.2.0",
     "react-native-easy-toast": "^1.1.0",
     "react-native-popup-dialog": "^0.11.46",
     "react-native-splash-screen": "^3.0.6",
