ios打包测试版

--- a/ios/youjishucai/Info.plist
+++ b/ios/youjishucai/Info.plist
@@ -29,7 +29,7 @@
 			<string>wexin</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wx552eb71ba49e52ad</string>
+				<string>wx4e425ddae999f00b</string>
 			</array>
 		</dict>
 	</array>
