--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-awesome-alerts": "^1.0.7",
     "react-native-cookies": "^3.3.0",
     "react-native-easy-toast": "^1.1.0",
+    "react-native-img-cache": "^1.5.3",
     "react-native-popup-dialog": "^0.11.46",
     "react-native-splash-screen": "^3.0.6",
     "react-native-storage": "^0.2.2",
@@ -31,7 +32,8 @@
     "react-navigation": "^2.0.1",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "rn-fetch-blob": "^0.10.11"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
