--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -140,6 +140,7 @@ android {
 
 dependencies {
     compile project(':react-native-cookies')
+    compile project(':react-native-view-shot')
     compile project(':react-native-splash-screen')
     compile project(':react-native-yunpeng-alipay')
     compile project(':RCTWeChat')
