--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-storage": "^0.2.2",
     "react-native-swiper": "^1.5.13",
     "react-native-tab-navigator": "^0.3.4",
+    "react-native-view-shot": "^2.4.0",
     "react-native-wechat": "^1.9.9",
     "react-native-yunpeng-alipay": "^2.0.0",
     "react-navigation": "^2.0.1",
