--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -105,6 +105,7 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -142,7 +143,6 @@ dependencies {
     compile project(':react-native-cookies')
     compile project(':react-native-view-shot')
     compile project(':react-native-splash-screen')
-    compile project(':react-native-yunpeng-alipay')
     compile project(':RCTWeChat')
     compile project(':rn-fetch-blob')
     compile fileTree(dir: "libs", include: ["*.jar"])
