--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -145,6 +145,7 @@ dependencies {
     compile project(':react-native-splash-screen')
     compile project(':RCTWeChat')
     compile project(':rn-fetch-blob')
+    compile project(':react-native-yunpeng-alipay')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
