--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-tab-navigator": "^0.3.4",
     "react-native-view-shot": "^2.4.0",
     "react-native-wechat": "^1.9.9",
+    "react-native-yunpeng-alipay": "^2.0.0",
     "react-navigation": "^2.0.1",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
